# projet-poo

./: CMakeLists.txt  README.md  ssh_tuto.txt
include/: all.h  component.h
source/: component.cpp  main.cpp
